--- a/ALFF_IDEMO_ISLA/R/IMCo_Validation.Rmd
+++ b/ALFF_IDEMO_ISLA/R/IMCo_Validation.Rmd
@@ -45,30 +45,41 @@ nifti_dir <- file.path(input_dir,
                        list("niftis/alff",
                             "niftis/cbf",
                             "niftis/idemo"))
-mask <- file.path(input_dir, "references/masks/gm10_pcals_rest.nii.gz") %>% check_ants()
+mask_path <- file.path(input_dir, "references/masks/gm10_pcals_rest.nii.gz")
+
+fwhm <- 3
+propMiss <- 0.9
 
 settings <- list(input = input_filepaths,
                  output_dir = output_dir,
                  input_dir = input_dir,
                  nifti_dir = nifti_dir,
-                 mask = mask)
+                 mask_path = mask_path,
+                 fwhm = fwhm,
+                 propMiss = propMiss)
 ```
 
 # Intermodal Coupling
 ```{r}
-test <- imco(list(settings$input$modality_1[1], settings$input$modality_2[1], settings$input$modality_3[1]), brainMask = settings$mask, out_dir = file.path(output_dir, "global_wcov"), out_name = "2647", ref = 1, fwhm = 3, retimg = T, type = "pca",
-  propMiss = 0.9, pcaType = "global", matrixType = "wcov"
-)
-bsub_global-wcov <- "imco(list(input_filepaths$modality_1, input_filepaths$modality_2, input_filepaths$modality_3), mask,
-  ref = 1, fwhm = 3, retimg = T, type = "pca",
-  propMiss = 0.9, pcaType = "global", matrixType = "wcov"
-)
-for(i in 1:1){
-  system2("Rscript -e '")
+x <- "hello"
+for(i in 1:2) {#nrow(settings$input_filepaths)) {
+  line <- settings$input[i, ]
+  out_name <- line[1]
+  subject_files <- cat(line[1, 2], line[1, 3], line[1, 4])
+  system2("Rscript", args = c("R/batch_scripts/01_perform_imco.R",
+                              subject_files, 
+                              settings$mask_path,
+                              file.path(settings$output_dir, "niftis/coupled/global_wcov"),
+                              settings$fwhm,
+                              settings$propMiss,
+                              "global",
+                              "wcov"))
+                              
 }
-global_wcov <- imco(list(input_filepaths$modality_1, input_filepaths$modality_2, input_filepaths$modality_3), mask,
-  ref = 1, fwhm = 3, retimg = T, type = "pca",
-  propMiss = 0.9, pcaType = "global", matrixType = "wcov"
+
+global_wcov <- imco(files, mask,
+                    ref = 1, fwhm = 3, retimg = T, type = "pca",
+                    propMiss = 0.9, pcaType = "global", matrixType = "wcov"
 )
 ```
 
